cmake_minimum_required(VERSION 2.8)
project( Homework4_ver2 )
find_package( OpenCV REQUIRED )
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
set(SOURCES_BAT Ctracker.cpp Ctracker.h HungarianAlg.cpp HungarianAlg.h Kalman.cpp Kalman.h bats_abg.cpp)
#add_executable( bats_ab_greedy bats_abg.cpp )
add_executable( bats_ab_greedy ${SOURCES_BAT} )
add_executable( fish_ab_greedy fish_abg.cpp )
target_link_libraries( bats_ab_greedy ${OpenCV_LIBS} )
target_link_libraries( fish_ab_greedy ${OpenCV_LIBS} )
